<resources>

    <string name="app_name">Weather Forecast</string>
    <string name="aboutActivity_title"> About Us </string>
    <string name="NoNetworkActivity_title"> Not Connected ! </string>
    <string name="pollutionActivity_title"> Pollution </string>
    <string name="contactActivity_title"> Contact Us </string>

    <string name="splash_text"> اپلیکیشن پیش بینی وضعیت آب و هوا </string>

    <string name="windDirection"> جهت وزش باد </string>
    <string name="windSpeed"> سرعت وزش باد </string>
    <string name="humidityPercent"> میزان رطوبت </string>
    <string name="atmosphericPressure"> فشار هوا </string>
    <string name="cloudinessPercent"> میزان ابری بودن </string>
    <string name="dailyTempratureRange"> بازه روزانه دما </string>

    <string name="noNetworkWarning"> خطا در برقرای ارتباط با سرور ! </string>
    
    <string name="noNetworkWarningButtonText"> بررسی تنظیمات شبکه </string>
    <string name="noNetworkRetryButtonText"> تلاش مجدد </string>
    <string name="noNetworkAboutButtonText"> درباره ما </string>
    <string name="noNetworkExitButtonText"> خروج </string>
    <string name="changeBackgroundColorTextView"> تغییر رنگ پس زمینه : </string>

    <string name="MorningTempratureLable"> صبح </string>
    <string name="DayTempratureLable"> ظهر </string>
    <string name="EveningTempratureLable"> عصر </string>
    <string name="NightTempratureLable"> شب </string>

    <string name="degree"> درجه </string>
    <string name="day"> روز </string>
    <string name="testNum"> 31 </string>

    <string name="action_about"> درباره اپلیکیشن </string>
    <string name="action_contactMe"> تماس با ما </string>
    <string name="action_pollution"> شاخص آلودگی هوا </string>

    <string name="pollution_date_text"> آخرین بروزرسانی : </string>
    <string name="SO2_text"> شاخص گاز دی اکسید گوگرد : </string>
    <string name="O3_text"> شاخص گاز اوزون : </string>

    <string name="creator_name"> توسط محمد مهدی تهرانی فخر </string>
    <string name="creator_email"> mahditehrani12@gmail.com </string>
    <string name="creator_number"> +98 903 053 6985 </string>

    <string name="pollutionText"> شاخص آلودگی هوای تهران : </string>

    <string name="app"> اپلیکیشن </string>
    <string name="water"> آب </string>
    <string name="and"> و </string>
    <string name="air"> هوا </string>

    <string name="about_part1">اپلیکیشن آب و هوا در ابتدا فقط یک اپلیکیشن برای تمرین و یادگیری بود ، اما بعد ها جهت قرار گرفتن در مارکت های اندرویدی تکمیل شد .</string>
    <string name="about_part2"> این اپلیکیشن اطلاعات مربوط به آب و هوای شهر تهران را در 14 روز آینده پیش بینی میکند و داده های خود را از وبسایت معتبر openWeatherMap دریافت میکند . </string>
    <string name="about_part3"> همچنین شاخص آلودگی کلان شهر تهران را تشخیص می دهد . این اطلاعات از وبسایت رسمی شاخص آلودگی هوای تهران بدست می آیند و مربوط به ایستگاه شاد آباد در منطقه 18 تهران هستند .</string>

    <string name="about_writtenBy"> نوشته شده با </string>

    <string name="contact_text"> در صورتی که در هر یک از قسمت های برنامه دچار مشکل شدید ، از طریق راه های زیر مشکل خود را برای ما ارسال کنید . ما تمامی موارد را مطالعه کرده و در سریعترین زمان ممکن به آن رسیدگی میکنیم. </string>

</resources>
