<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ir.mahdiha.weatherforecast.app.NoNetworkActivity" >

    <ImageView
        android:id="@+id/activityNoNetwork_imageView_warning"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/wifi_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp" />

    <ir.mahdiha.weatherforecast.customviews.PersianTextView
        android:id="@+id/activityNoNetwork_persianTextView_warning"
        android:layout_below="@+id/activityNoNetwork_imageView_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_centerInParent="true"
        android:text="@string/noNetworkWarning"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:layout_centerVertical="true"
        android:gravity="center"
        app:locale="fa_IR" />

    <ir.mahdiha.weatherforecast.customviews.PersianButton
        android:id="@+id/activityNoNetwork_button_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityNoNetwork_persianTextView_warning"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/buttonMargin_activityNoNetwork"
        android:layout_marginEnd="@dimen/buttonMargin_activityNoNetwork"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/background_no_network_button"
        android:text="@string/noNetworkWarningButtonText"
        android:textSize="18sp"
        android:textColor="@color/colorWhite" />

    <ir.mahdiha.weatherforecast.customviews.PersianButton
        android:id="@+id/activityNoNetwork_button_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityNoNetwork_button_warning"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/buttonMargin_activityNoNetwork"
        android:layout_marginEnd="@dimen/buttonMargin_activityNoNetwork"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@drawable/background_no_network_button"
        android:text="@string/noNetworkRetryButtonText"
        android:textSize="18sp"
        android:textColor="@color/colorWhite" />

</RelativeLayout>